add Car.js Controls.js, implement move function in car, add Road.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
+    <script src="./src/Controls.js"></script>
+    <script src="./src/Car.js"></script>
     <script src="./src/main.js"></script>
   </body>
 </html>
